--- a/package.json
+++ b/package.json
@@ -17,28 +17,34 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "bootstrap": "^3.3.7",
+    "bootstrap-material-design": "^0.5.10",
     "css-loader": "^0.23.1",
     "deep-freeze-strict": "^1.1.1",
     "expect": "^1.14.0",
     "express": "^4.13.4",
+    "file-loader": "^0.11.1",
     "firebase": "^3.0.2",
     "foundation-sites": "6.2.0",
     "jquery": "^2.2.1",
+    "json-loader": "^0.5.4",
     "moment": "^2.12.0",
     "node-env-file": "^0.1.8",
     "node-sass": "^3.4.2",
     "node-uuid": "^1.4.7",
-    "react": "^0.14.7",
-    "react-addons-test-utils": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react": "^15.5.4",
+    "react-addons-test-utils": "^15.5.1",
+    "react-dom": "^15.5.4",
     "react-redux": "^4.4.1",
-    "react-router": "^2.0.0",
+    "react-router": "^2.6.0",
     "redux": "^3.3.1",
     "redux-mock-store": "^1.0.3",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
+    "survey-react": "^0.12.16",
+    "url-loader": "^0.5.8",
     "webpack": "^1.12.13"
   },
   "devDependencies": {
