--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
+    "react-multistep-component": "0.0.5",
     "react-redux": "^4.4.1",
     "react-router": "^2.6.0",
     "redux": "^3.3.1",
